# supera

./: Cargo.toml  README.md  clippy.toml
src/: lib.rs  oneshot.rs  oneshot_pool.rs  oneshot_single.rs  queue.rs  queue_pool.rs  queue_single.rs  test.rs
