[package]
name = "supera"
version = "0.3.2"
edition = "2024"
authors = [ "Manse <pedromanse@duck.com>" ]
license = "GPL-3.0"
description = "Manager for simple async runners"
repository = "https://github.com/PedroManse/supera"

[dependencies]
crossbeam = "0.8.4"
oneshot = "0.1.11"

[lints.clippy]
perf = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
unwrap-used = "warn"
missing-errors-doc = "warn"
