[package]
name = "supera"
version = "0.4.0"
edition = "2024"
authors = [ "Manse <pedromanse@duck.com>" ]
license = "GPL-3.0"
description = "Library for managing worker threads"
repository = "https://github.com/PedroManse/supera"

[dependencies]
crossbeam-channel = "0.5.15"
oneshot = "0.1.11"

[lints.clippy]
perf = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
unwrap-used = "warn"
missing-errors-doc = "warn"
